css/PortalThumbnailGenerator.css
.thumbnailCanvas {
    border: 2px solid black;
    height: 400px;
    width: 600px;
}
/* Fixed size for the output image */
.canvas-width {
    width: 600px;
}
.canvas-height {
    height: 400px;
}
/* Bootstrap icon formatting */
.bi {
    width: 1em;
    height: 1em;
    display: inline-block;
    margin-top: -.25em;
}
/* The card itself */
.thumbnailGenCard {
    min-height: 500px;
}
/* Elements only displayed when an item is selected from the ArcGIS portal */
.requiresSelection {
    display: none;
}
/* Max height for search results */
.searchResults {
    max-height: 12rem;
    overflow: scroll;
}

